Changelog started November, 2006; Currently at version 0.1

Legend:
--------------------------------------------------------------------------------
 ! Minor change or bugfix. (don't bother to log typos except between releases.)
 * Change like above, but affects templates.
 & Change that affects a language file. (make two if it affects templates too.)
 + Feature addition or improvement.
 - Feature or option removal.
 % Development flag or note, such as branching.


Pretty URLs 0.1                                          ??
================================================================================
 + Base: Added generatePrettyUrl function and $characterHash with almost all characters from latin-1. (Subs-PrettyUrls.php)
 + Base: Generate the pretty URLs of the forum's boards. (install.php)
 + Base: Included an example .htaccess file (example.htaccess)
 + Base: Added 'pretty_root_url' setting, defaulting to $boardurl.
 + ext-none: Replace the board urls in the BoardIndex and MessageIndex templates.
 ! Base: Fixed $characterHash so '+' would never be in a URL. (Subs-PrettyUrls.php)
 ! Base: Fixed issues with '&amp;' and removed unwanted '-'s. (Subs-PrettyUrls.php)
 + Base: A new board deserves a new URL! (ManageBoards.php)
 + ext-none: Replaced the board URLs in SSI.php, News.php and Recent.php.
 ! Base: generatePrettyUrl is now simpler and hopefully more efficient. (Subs-PrettyUrls.php)
 + Base: If numbers were used in the query string, allow the possibility of redirecting to a pretty URL. (QueryString.php)